@@ -14,6 +14,10 @@ xxx, S3QL HEAD
 
   * S3QL can now log directly to syslog.
 
+  * fsck now checks if all indices have been created. This avoids
+    a huge performance problem when mount.s3ql was interrupted
+    after downloading metadata, but before creating the indices.
+
 2011-05-20, S3QL 1.0.1
 
   * Disabled WAL mode again for now because of unexpected problems
